<resources>
    <string name="app_name">HaidaibanDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- 注册 -->
    <string name="registerinfo">输入手机号后，点击"获取密码"，系统会自动向你的手机发送一条短信</string>
    <string name="register_tip">【提示】\n 1.使用手机号注册免费 \n 2.此手机号用来登录京东\n 3.你还可以选择其他注册方式</string>
    <string name="register_in_normal">普通用户注册</string>
    <string name="register_normal_useraccount">帐户名：</string>
    <string name="register_normal_useraccount_hint">请输入你的手机号</string>
    <string name="register_normal_email">邮箱：</string>
    <string name="register_normal_email_hint">请输入邮箱帐号</string>
    <string name="register_normal_password">密码：</string>
    <string name="register_normal_password_hint">请输入密码</string>
    <string name="register_normal_repassword">确认密码：</string>
    <string name="register_normal_repassword_hint">请输入确认密码</string>

    <!-- 登入 -->
    <string name="login">登录</string>
    <string name="loginacount">账号名：</string>
    <string name="loginpassword">密   码：</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputaccount">请输入账号</string>
    <string name="register">快速注册</string>
    <string name="search_info">暂无收索历史</string>
    <string name="login_btn">登   录</string>
    <string name="find_password">找回密码</string>
    <string name="usecooperationaccount">用合作网站帐户登录</string>
    <string name="registerfree">免费注册</string>

    <!-- 填写询价单 -->
    <string name="goodstitle_pricefill">填写询价单</string>
    <string name="tx_total_ten">每个询价单最多可添加10件商品</string>
    <string name="goodsname">商品名称</string>
    <string name="goodsnamehit">输入询价商品名称</string>
    <string name="goodsnumber">数量</string>
    <string name="goodsnumberhit">输入购买数量</string>

    <string name="goodstype">型号</string>
    <string name="goodstypehit">输入尺码，规格，颜色</string>
    <string name="goodsphoto">图片</string>
    <string name="goodsphotohit">点击添加图片，最多可以添加三张</string>
    <string name="goodsmoreinfo">附加信息</string>
    <string name="goodsmoreinfohit">选填，详尽信息有助于代办快速接单准确报价</string>
    <string name="goodslink">连接</string>
    <string name="goodslinkhit">http://</string>
    <string name="goodsofficialprice">官方价格</string>
    <string name="goodsofficialpricehit">输入商品采购网站折扣后最终外币价格</string>
    <string name="goodscouponcode">折扣码</string>
    <string name="goodstax">是否包税</string>
    <string name="goodstaxhit">包税是指代办为您支付可能出现的关税</string>
    <string name="goodsshipping">包邮方式</string>
    <string name="goodsshippinghit">拼邮是值代办把商品批量发回国内再分寄</string>
    <string name="goodsrecomment">备注</string>
    <string name="goodsyes">是</string>
    <string name="goodsno">否</string>
    <string name="goodsanyway">无所谓</string>
    <string name="goodsbtnaddmore">添加新商品</string>
    <string name="goodsbtnpersee">预览询价单</string>

    <!--待发询价单-->
    <string name="tempoffer_again">指定代办</string>
    <string name="tempoffer_again_hit">请在此处输入代办ID，可不填</string>
    <string name="tempoffer_again_btn">确定添加</string>
    <string name="tempoffer_add_btn">添加新商品</string>
    <string name="tempoffer_submit_btn">提交询价单</string>


    <!-- 待发询价菜单 -->
    <string name="tempoffer_menu_btn_creatnewoffer">新建询价单</string>
    <string name="tempoffer_menu_btn_reviewoffer">查看询价单</string>
    <string name="tempoffer_menu_btn_backmain">返回首页</string>

    <string name="tempoffer_menu_tx">您的询价单已提交，请耐心等待办理，您还可以</string>

    <!-- 个人中心-->
    <string name="profile_money">我的资金账户</string>
    <string name="profile_getmessage">我的收件信息</string>
    <string name="profile_myagain">我的代办管理</string>
    <string name="profile_myagain_fav">收藏</string>
    <string name="profile_myagain_blacklist">黑名单</string>

    <string name="profile_myagain_mycredit">我的信用评分 ：</string>
    <string name="profile_myagain_help">帮组指南</string>
    <string name="profile_myagain_feedback">用户反馈</string>
    <string name="profile_myagain_signout">退出登出</string>


    <string-array name="tabTitle">
        <item>最新</item>
        <item>最热</item>
        <item>收藏</item>
    </string-array>

    <string-array name="category">
        <item>美容护肤</item>
        <item>服饰鞋包</item>
        <item>母婴儿童</item>
        <item>保健食品</item>
        <item>电气电子</item>
        <item>电脑相机</item>
        <item>家具用车</item>
        <item>运动户外</item>
        <item>书籍影音</item>
        <item>其他商品</item>
    </string-array>


    <!--拍照-->
    <string name="camera_upload">从本地上传</string>
    <string name="camera_takephoto">拍照上传</string>
    <string name="camera_yes">确定</string>
    <string name="camera_cancel">取消</string>

    <!-- 登入界面-->
    <string name="signin_title">海代办</string>
    <string name="signin_emailorname">邮箱或者用户名</string>
    <string name="signin_password">登入密码</string>
    <string name="signin_btn_signin">登入</string>
    <string name="signin_btn_autosignin">自动登入</string>
    <string name="signin_btn_forgetpw">忘记密码</string>
    <string name="signin_btn_signup">注册账户</string>
    <string name="signin_3rdsign">第三方登入</string>
    <!--注册海代办-->
    <string name="signup_title">注册海代办</string>
    <string name="signup_btn_user">买家注册</string>
    <string name="signup_btn_again">代办入住</string>
    <string name="signup_btn_signup">注册</string>
    <string name="signup_email">填写邮箱地址</string>
    <string name="signup_username">填写用户名</string>
    <string name="signup_setpassword">设置密码</string>
    <string name="signup_setpasswordagain">再次输入密码</string>
    <string name="signup_moreinfo">点击注册按钮，代办您已阅读信息“海代办使用协议”</string>
<!-- action bar-->
    <string name="actionbar_search">search</string>
<!-- details -->
    <string name="brand">品牌</string>
    <string name="store">商店</string>
    <string name="detaillink">链接</string>
    <string name="discount">折扣</string>
    <string name="coupon">折扣码</string>
    <string name="shippingdiscount">运费折扣</string>
    <string name="shippingcoupon">运费折扣码</string>
    <string name="special">特别活动</string>
    <string name="enddate">截止日期</string>
    <string name="tip">温馨小提示</string>
    <string name="website">查看官网</string>
    <string name="usecoupon">用此折扣代购</string>
    <string name="bookmark">收藏</string>
    <string name="related">您可能会喜欢</string>
    <string name="likeSuccess">收藏成功</string>
    <string name="unlikeSuccess">取消收藏</string>
    <string name="comment">评论</string>

    <!--- search-->
    <string name="search">search</string>

    <!-- 填写评论 -->
    <string name="sent_comment">填写评论。。。</string>

    <!--product detail title-->
    <string-array name="productDetailTitle">
        <item>商品</item>
        <item>评论</item>
    </string-array>

    <!--sended  Price title-->
    <string-array name="SendedPriceTitle">
        <item>全部</item>
        <item>待报价</item>
        <item>已报价</item>
        <item>已关闭</item>
    </string-array>


    <!--order  Price title-->
    <string-array name="OrderTitle">
        <item>全部</item>
        <item>已付款</item>
        <item>采购中</item>
        <item>投递中</item>
        <item>交易完成</item>
        <item>交易取消</item>
        <item>付款采购中</item>
    </string-array>
    <string name="paiedDeposit">已付定金</string>

    <string name="commentFirst">please comment first</string>
    <string name="commentSuccess">comment success</string>
    <string name="commentFailed">comment failed, please check connection</string>
<!--推荐商品dialog-->
    <string name="dialog_recomm_usethiscoupon">使用此折扣</string>
    <string name="dialog_recomm_officialsite">进入官网</string>


    <!-- D 我的订单-->
    <string name="d_myorder">我的订单</string>
    <string name="d_processing">采购中</string>
    <string name="d_ordernumber">订单编号</string>
    <string name="d_again">代办</string>
    <string name="d_order_stats">订单状态</string>
    <string name="d_title_orderdetails">订单详情</string>
    <string name="d_titile_tracking">状态追踪</string>
    <string name="d_titile_orderinfo">订单信息</string>
    <string name="d_titile_receiveinfo">收货人信息</string>

    <!--收货人信息-->
    <string name="d_receiveinfo_name">收货人 :</string>
    <string name="d_receiveinfo_add"> 地 址  :</string>
    <string name="d_receiveinfo_phone"> 联系电话 :</string>

    <!--收货人信息 button-->
    <string name="d_btn_pay">补款</string>
    <string name="d_btn_applyextention">申请延期</string>
    <string name="d_btn_confirm">确认收货</string>

    <string name="d_btn_review">评价</string>
    <string name="d_btn_shareorder">晒单</string>
    <string name="d_btn_orderagain">再次下单</string>


    <string name="d_btn_cancel">弃单</string>
    <string name="d_btn_argue">投诉维权</string>


    <!--询价单详情-->

    <string name="c_orderdetails_18hours_1">正在等待代办接单，若</string>
    <string name="c_orderdetails_18hours_2">小时内无人接单，则询价单将被关闭.</string>

    <string name="c_orderdetails_cancel">终止询价</string>
    <string name="c_orderdetails_dialog_question"> 确认终止报价？</string>
    <string name="c_orderdetails_dialog_cancel">取消</string>
    <string name="c_orderdetails_dialog_yes">确认</string>
    <string name="c_orderdetails_waiting">待报价</string>
    <string name="c_orderdetails_closed">已关闭</string>
    <string name="c_orderdetails_accepted">已报价</string>
    <string name="orderClosed">超时无代办接单或无进行中的报价，系统已终止询价</string>
    <string name="orderAccepted_1">已收到代办</string>
    <string name="orderAccepted_2">的报价</string>

    <!-- D_1 订单详情-->
    <string name="d1_ordertitle">订单详情</string>
    <string name="d1_orderstatus">订单状态</string>
    <string name="d1_ordertrack">订单追踪</string>
    <string name="d1_orderinfo">订单信息</string>
    <string name="d1_consignee">收货人信息</string>
    <string name="d1_status0">已付款</string>
    <string name="d1_status1">采购中</string>
    <string name="d1_status2">投递中</string>
    <string name="d1_status3">已完成</string>
    <string name="d1_title_ordernumber">订单编号：</string>
    <string name="d1_title_order_time">最近更新 ：</string>

    <string name="d1_consignee_name">收货人 :</string>
    <string name="d1_consignee_add">地 址 :</string>
    <string name="d1_consignee_phone">电 话 :</string>

    <string name="d1_btn_argue">投诉维权</string>
    <string name="d1_btn_cancelorder">弃单</string>
    <string name="d1_btn_addmoney">补款</string>
    <string name="d1_btn_addtime">申请延期</string>
    <string name="d1_btn_getstuff">确认收货</string>
    <string name="d1_btn_shareorder">晒单</string>
    <string name="d1_btn_orderagain">再次下单</string>

    <string name="d1_info_goods">商品</string>
    <string name="d1_info_nums">数量</string>
    <string name="d1_info_type">型号</string>
    <string name="d1_info_shipping">邮寄方式</string>
    <string name="d1_info_tax">是否包税</string>

    <string name="money">￥</string>
    <string name="d1_addtime">延期天数</string>
    <string name="d1_addtimereason">延期原因</string>
    <string name="ditchOrder">弃单</string>
    <string name="ditchReason">弃单原因</string>

    <string-array name="customerAction">
        <item>弃单</item>
        <item>再次下单</item>
        <item>晒单</item>
        <item>确认收货</item>
        <item>申请延期</item>
        <item>补款</item>
        <item>投诉维权</item>
    </string-array>


    <!--E0-->
    <string name="profile_username">用户名</string>
    <string name="profile_usermoney">账户余额 ：</string>

    <string name="cashsum">资金总额</string>
    <string name="cashnumber">123456.00</string>

    <string name="cashout">提现</string>
    <string name="cashin">充值</string>

    <string name="myredcash">我的红包</string>
    <string name="mycoupon">我的优惠券</string>
    <string name="mymoneypassword">设置交易密码</string>

    <!-- 地址-->
    <string name="my_adds_province">省市区</string>
    <string name="my_adds_town">乡镇/街道</string>
    <string name="my_adds_details">详细地址</string>
    <string name="my_adds_person_name">收件人</string>
    <string name="my_adds_person_phone_num">手机号</string>
    <string name="my_adds_set_default">设置为默认收货地址</string>
    <string name="my_save">保存</string>





</resources>
