<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:text="@string/tx_total_ten"
                android:gravity="center"
                android:background="@color/skyblue" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.2"
                android:text="@string/goodsname"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="0.8"
                android:hint="@string/goodsnamehit"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>
        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/goodsnumber"
                android:layout_weight="1.2"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="14sp"
                android:hint="@string/goodsnumberhit"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.2"
                android:text="@string/goodsphoto"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="14sp"
                android:hint="@string/goodsphotohit"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.2"
                android:text="@string/goodsmoreinfo"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_moreinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="14sp"
                android:hint="@string/goodsmoreinfohit"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_marginLeft="20dp"
                android:text="@string/goodslink"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="14sp"
                android:hint="@string/goodslinkhit"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_marginLeft="20dp"
                android:text="@string/goodsofficialprice"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/et_ap_ofprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="14sp"
                android:hint="@string/goodsofficialpricehit"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.2"
                android:text="@string/goodscouponcode"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="0.8"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/goodstax"
                android:textColor="@color/grey" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RadioGroup
                android:id="@+id/radiogrouptax"
                android:layout_width="200dp"
                android:layout_marginLeft="20dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_tax_yes"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/goodsyes"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_tax_no"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/goodsno"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_tax_anyway"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/goodsanyway"
                    android:textSize="12sp" />

            </RadioGroup>
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/goodsshipping"
                android:textColor="@color/grey" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <RadioGroup
                android:id="@+id/radiogroupShipping"
                android:layout_width="200dp"
                android:layout_marginLeft="20dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_shipping_yes"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/goodsyes"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_shipping_no"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/goodsno"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_shipping_anyway"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/goodsanyway"
                    android:textSize="12sp" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:layout_marginLeft="20dp"
                android:text="@string/goodsrecomment"
                android:textColor="@color/grey" />
            <EditText
                android:id="@+id/et_ap_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:textSize="14sp"
                android:textColorHint="@color/gray" />
        </TableRow>
        <TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/grey" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btn_ap_addnewitem"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/round_button_blue"
                android:text="@string/goodsbtnaddmore"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />

            <Button
                android:id="@+id/btn_ap_perview"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:background="@drawable/round_button_green"
                android:text="@string/goodsbtnpersee"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />
        </TableRow>
    </TableLayout>
</ScrollView>